--- a/index.html
+++ b/index.html
@@ -12,5 +12,12 @@
 
 <body>
   <h1>Ramsey Alhajjaj</h1>
+  <nav>
+    <ul>
+      <li>
+        <a href="gordo/index.html" title="Our First Web Project">Gordo Assignment</a>
+      </li>
+    </ul>
+  </nav>
 </body>
 </html>
