--- a/index.html
+++ b/index.html
@@ -7,7 +7,7 @@
   <title>IFSC 1310 | Ramsey Alhajjaj</title>
   <meta name="description" content="Keyword Rich Description" />
   <meta name="author" content="Ramsey Alhajjaj" />
-
+<link href="assets/css/style.css" rel="stylesheet" />
 </head>
 
 <body>
