--- a/index.html
+++ b/index.html
@@ -20,6 +20,9 @@
       <li>
         <a href="css-demo/index.html" title="Learning CSS">CSS Demo</a>
       </li>
+      <li>
+        <a href="flexboxfroggy/index.html" title="Flexbox Froggy">Flexbox Froggy</a>
+      </li>
     </ul>
   </nav>
 </body>
