--- a/flexboxfroggy/index.html
+++ b/flexboxfroggy/index.html
@@ -5,7 +5,7 @@
     </head>
     <body>
         <figure>
-        <img source="assets/img/capture.jpeg"/>
+        <img src="assets/img/capture.jpeg"/>
         <figcaption>Level 24
         </figcaption>
     </figure>
