--- a/flexboxfroggy/index.html
+++ b/flexboxfroggy/index.html
@@ -2,12 +2,13 @@
 <html lang="en">
     <head>
         <title>flexboxfroggy</title>
+        <meta charset="utf-8"/>
+        <meta name="author" content="Ramsey Alhajjaj" />
     </head>
     <body>
         <figure>
-        <img src="assets/img/capture.jpeg"/>
-        <figcaption>Level 24
-        </figcaption>
+        <img src="assests/img/capture.jpeg"/>
+        <figcaption>Level 24</figcaption>
     </figure>
     </body>
 </html>
