--- a/index.html
+++ b/index.html
@@ -23,6 +23,18 @@
       <li>
         <a href="flexboxfroggy/index.html" title="Flexbox Froggy">Flexbox Froggy</a>
       </li>
+      <li>
+        <a href="positioning-lab/float-1.html" title="Float-1">Flexbox Froggy</a>
+      </li>
+      <li>
+        <a href="positioning-lab/float-2.html" title="Float-2">Flexbox Froggy</a>
+      </li>
+      <li>
+        <a href="positioning-lab/absolutepostitioning-1.html" title="Absolute Positioning 1">Flexbox Froggy</a>
+      </li>
+      <li>
+        <a href="positioning-lab/absolutepositioning-2.html" title="Absolute Positioning 2">Flexbox Froggy</a>
+      </li>
     </ul>
   </nav>
 </body>
