--- a/index.html
+++ b/index.html
@@ -24,16 +24,22 @@
         <a href="flexboxfroggy/index.html" title="Flexbox Froggy">Flexbox Froggy</a>
       </li>
       <li>
-        <a href="positioning-lab/float-1.html" title="Float-1">Flexbox Froggy</a>
+        <a href="positioning-lab/float-1.html" title="Float-1">Float-1</a>
       </li>
       <li>
-        <a href="positioning-lab/float-2.html" title="Float-2">Flexbox Froggy</a>
+        <a href="positioning-lab/float-2.html" title="Float-2">Float-2</a>
       </li>
       <li>
-        <a href="positioning-lab/absolutepostitioning-1.html" title="Absolute Positioning 1">Flexbox Froggy</a>
+        <a href="positioning-lab/absolutepostitioning-1.html" title="Absolute Positioning 1">Absolute Postitioning 1</a>
       </li>
       <li>
-        <a href="positioning-lab/absolutepositioning-2.html" title="Absolute Positioning 2">Flexbox Froggy</a>
+        <a href="positioning-lab/absolutepositioning-2.html" title="Absolute Positioning 2">Absolute Positioning 2</a>
+      </li>
+      <li>
+        <a href="icontutorial/index.html" title="Icon Tutorial">Icon Tutorial</a>
+      </li>
+      <li>
+        <a href="imagemadeinclass/index.html" title="In Class Image">In Class Image</a>
       </li>
     </ul>
   </nav>
