--- a/index.html
+++ b/index.html
@@ -41,6 +41,9 @@
       <li>
         <a href="imagemadeinclass/index.html" title="In Class Image">In Class Image</a>
       </li>
+      <li>
+        <a href="dragonfirstdraft/index.html" title="SpaceX Dragon">SpaceX Dragon</a>
+      </li>
     </ul>
   </nav>
 </body>
