--- a/dragonfirstdraft/index.html
+++ b/dragonfirstdraft/index.html
@@ -4,7 +4,7 @@
 <head>
   <title>SpaceX Dragon</title>
   <meta charset="UTF-8" />
-  <meta name="description" content="Keyword rich narrative on site purpose" />
+  <meta name="description" content="First Private Spacecraft to the Spacestation" />
   <meta name="author" content="Ramsey Alhajjaj" />
   <link href="assets/css/style.css" rel="stylesheet"/>
   <link rel="preconnect" href="https://fonts.googleapis.com">
