--- a/index.html
+++ b/index.html
@@ -44,6 +44,9 @@
       <li>
         <a href="dragonfirstdraft/index.html" title="SpaceX Dragon">SpaceX Dragon</a>
       </li>
+      <li>
+        <a href="slick-demo/index.html" title="Cycle Lab">Cycle Lab</a>
+      </li>
     </ul>
   </nav>
 </body>
