--- a/index.html
+++ b/index.html
@@ -7,7 +7,10 @@
   <title>IFSC 1310 | Ramsey Alhajjaj</title>
   <meta name="description" content="Keyword Rich Description" />
   <meta name="author" content="Ramsey Alhajjaj" />
-<link href="assets/css/style.css" rel="stylesheet" />
+  <link rel="preconnect" href="https://fonts.googleapis.com">
+  <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+  <link href="https://fonts.googleapis.com/css2?family=Roboto&display=swap" rel="stylesheet">
+  <link href="assets/css/style.css" rel="stylesheet">
 </head>
 
 <body>
@@ -47,7 +50,18 @@
       <li>
         <a href="slick-demo/index.html" title="Cycle Lab">Cycle Lab</a>
       </li>
+      <li>
+        <a href="dragonxproject/index.html" title="Dragon X Project">DragonX Revised</a>
+      </li>
     </ul>
   </nav>
+  <h1>Thoughts on Progressive Enhancment</h1>
+  <p>
+Hellow whats up my dudes and dudettes
+  </p>
+  <h1>DragonX Project Reflection</h1>
+  <p>
+    Dragon Reflection
+  </p>
 </body>
 </html>
