--- a/index.html
+++ b/index.html
@@ -57,11 +57,33 @@
   </nav>
   <h1>Thoughts on Progressive Enhancment</h1>
   <p>
-Hellow whats up my dudes and dudettes
+Progressive Enhancment is a philosophy in web design that says we should attempt to make web pages where the content can be accessed by everyone no matter what browser or system.
+It's important that we use progressive enhancment because then everyone can access the web no matter where they are in the world or how old there computer is. The basic idea is
+that we focus on making it so that the HTML or content of the page loads first and is readalbe to everyone who may load the page even without the CSS. Second most important is CSS 
+to make the page actually look nice not just black text on a white background, but the idea is that it's not important cause the page is still usable without it. Lastley is Java Script 
+this is important to the functionality of the moving objects on the web page but if we just want to load the content it doesn't matter if the script doesn't work and the navigation bar no longer
+sticks to the top of the screen. If you want to learn more about progressive enhancment you can read this article by Praveen Dubey for free code camp.
   </p>
+  <a href="https://www.freecodecamp.org/news/what-is-progressive-enhancement-and-why-it-matters-e80c7aaf834a/" id="link">Progressive Enhancment Article</a>
   <h1>DragonX Project Reflection</h1>
   <p>
-    Dragon Reflection
-  </p>
+    When I look back at my original draft of the DragonX project not much is diffrent. I did collect feed back from my family, but there complaints were minor, as were the technical
+    issues I faced on that draft. The only real technical problem was that the navigation did not work due to me accidentally putting the buttons below the background image, but
+    this was an easy fix. I was also told that on a couple of pages the some elements did not have the same margins. On the history page the paragraph explaining the program
+    had a diffrent margin than the table below it. Things like that were the main problem, just tiny sloppy mistakes that were easy to fix.
+</p>
+<p>
+  I liked the way my project turned out in the end but it is not what I had wanted. I attemted to make my pages look more like the web pages for the actual DragonX project but it
+  didn't work. I ended up breaking code in a way I had no idea how to fix so I just let it go back to its previous form. Even following online tutorials didn't help. I wanted to make 
+  my nav bar sticky so that when you scrolled it stayed at the top of your screen I consulted three diffrent tutorials and couldn't get it to work. The truth is I am not really
+  good at CSS yet I know how to get all the information onto the page with HTML, but making it look nice is a struggle. I guess the language is just a bit confusing for me at the moment.
+  I can do basic things like add margins and align the text, but anything more complex and I get completly lost on my own. I think that if I started over on this project I would ask
+  for more help while I had the chance. Instead of trying over and over then when I couldn't figure something out giving up and leaving my CSS as simple as possible. Overall I think
+  I've learned a lot this semester, the only thing I would change really is devoting more of my free time to learning this and asking for help more often than I did. 
+</p>
+
+<footer id="colophon" role="contentinfo">
+  <h6>&copy; 2020 Ramsey Alhajjaj</h6>
+</footer>
 </body>
 </html>
